Update SB Wizard to v3.0.1

--- a/zips/plugin.program.supremebuildswizard/changelog.txt
+++ b/zips/plugin.program.supremebuildswizard/changelog.txt
@@ -1,11 +1,21 @@
-[B]Version 1.0.0[/B]
-- Initial release
+v1.0.0
+-Initial Release (credit: AmoBox , KodiSkills)
 
-[B]Version 1.0.1[/B]
-- added apk installer
+v1.0.1
+-Updated Artwork (credit: KodiSkills)
+-Added Additional Maintenance Section (credit: Kodiskills)
 
-[B]Version 2.0.0[/B]
-- Major code changes and graphics update
+v2.0.0
+-Updated Artwork (credit: Morpheus , KodiSkills)
+-Added APK Installer (credit: Echo Coder)
+-Added Separate Builds Menu for Different Versions of Kodi (credit: KodiSkills)
+-Added speed and file info for download.py and extract.py (credit: ][NT3L][G3NC][)
+-Fixed Android Force Close Issue (credit: Surfacingx , Echo Coder)
 
-[B]Version 3.0.0[/B]
-- Switch to Aftermath base
+v3.0.0
+-Switched to Aftermath Code (credit: Surfacingx)
+
+v3.0.1
+-Fixed Official Kodi APK downloads issue (credit: Surfacingx)
+-Added in Auto Install of Supreme Builds Repository (credit: Surfacingx , KodiSkills)
+-Added in Exclusions During Fresh Start for Supreme Builds Repository and Infadroid Repository (credit: Surfacingx , KodiSkills)
