--- a/plugin.program.supremebuildswizard/changelog.txt
+++ b/plugin.program.supremebuildswizard/changelog.txt
@@ -18,13 +18,16 @@ v3.0.0
 v3.0.1
 -Fixed Official Kodi APK downloads issue (credit: Surfacingx)
 -Added in Auto Install of Supreme Builds Repository (credit: Surfacingx , KodiSkills)
--Added in Exclusions During Fresh Start for Supreme Builds Repository and Infadroid Repository (credit: Surfacingx , KodiSkills)
+-Added in Exclusions During Fresh Start for Supreme Builds Repository (credit: Surfacingx , KodiSkills)
 
 v3.0.2
--Updated downloader.py (credit: Charlie Whelan)
+-Updated downloader.py with longer socket timeout (credit: Charlie Whelan)
 
 v3.0.3
 -Turned off auto install repo as causing issues with fork (credit: KodiSkills)
 
 v3.0.4
 -Host change (credit: KodiSkills)
+
+v3.0.5
+-Wizard updated with SSL protocol (credit: KodiSkills)
