--- a/zips/plugin.program.supremebuildswizard/changelog.txt
+++ b/zips/plugin.program.supremebuildswizard/changelog.txt
@@ -31,3 +31,6 @@ v3.0.4
 
 v3.0.5
 -Wizard updated with SSL protocol (credit: KodiSkills)
+
+v3.0.6
+-Changed naming convention (credit: KodiSkills)
