--- a/zips/plugin.program.supremebuildswizard/changelog.txt
+++ b/zips/plugin.program.supremebuildswizard/changelog.txt
@@ -37,3 +37,6 @@ v3.0.6
 
 v3.0.7
 -Changed default auto cleanup to weekly (credit: Prometheus)
+
+v4.0.0
+-Updated to work with Kodi 18 (credit:drinfernoo , FireTV Guru)
